# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml  run.sh  user_interaction_flow.md
backend/: ai_generator.py  app.py  debug_chromadb.py  search_tools.py  test_live_system.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py
frontend/: index.html  script.js  style.css
scripts/: fix-lint.sh  format.sh  quality.sh
